# MatrixIM

./: CMakeLists.txt  Makefile_Linux  README.md  TODO
locale/: pl.json
locale/pl_PL.UTF-8/LC_MESSAGES/: messages.mo  messages.po
src/: app.c  app.h  main.c  utils.c  utils.h
src/http/: http.c  http.h
src/matrix/: homeserver.c  homeserver.h  login.c  login.h  register.c  register.h  room.c  room.h
src/network/: socket.c  socket.h  socket_unix.c
src/screens/: login_screen.c  login_screen.h  main_screen.c  main_screen.h  new_room_dialog.c  new_room_dialog.h
src/translation/: translation.c  translation.h
src/utils/: array.c  array.h  filesystem.c  filesystem.h  gettext_util.c  gettext_util.h  log.c  log.h  message.c  message.h  str.c  str.h  vector.c  vector.h
ui/: matrixim_login_screen.ui  matrixim_login_screen.ui~  matrixim_main_screen.ui  matrixim_main_screen.ui~  matrixim_new_room_dialog.ui  matrixim_new_room_dialog.ui~
